--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DB_PORT_TEST=63406
 DB_TEST=gds_ticket_test
 DB_USER=gds
 DB_PASSWORD=gds
+VERIFICATION_URL=http://gds-ticket-service.com/
+TOKEN_EXPIRATION=24h
