--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.16.0",
     "express": "^4.14.0",
     "gds-config": "latest",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.6.7",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-paginate": "^5.0.3",
