verify token implementation

--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@ DB_PORT_TEST=63406
 DB_TEST=gds_ticket_test
 DB_USER=gds
 DB_PASSWORD=gds
+SECRET_KEY=library
 VERIFICATION_URL=http://gds-ticket-service.com/
 TOKEN_EXPIRATION=24h
